# lovely

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-crate.yml
docs/: web-runtime.md
src/: archive.rs  butler.rs  check.rs  cli.rs  config.rs  error.rs  fsutil.rs  lib.rs  lockfile.rs  main.rs  runtime.rs
src/targets/: desktop.rs  mod.rs  switch.rs  web.rs
tests/: cli.rs
tests/fixtures/minimal-game/: main.lua
